--- a/src/pages/Blog/Blog.css
+++ b/src/pages/Blog/Blog.css
@@ -1,14 +1,15 @@
 .blog-poster {
-    background-color:rgb(79, 79, 82);
+    background-color:rgb(34, 83, 85);
     color: white;   
     font-size: 20px;
     width: 300px;
     height: 400px;
     margin: auto;
     padding: 50px;
-    padding-top: 150px;
+    padding-top: 50px;
     border: 2px solid rgb(5, 5, 5);
     margin-bottom: 50px;
+    margin-top: 50px;
 }
 
 .blog {
