--- a/src/pages/SearchImages/SearchImages.css
+++ b/src/pages/SearchImages/SearchImages.css
@@ -1,8 +1,9 @@
+.image-search-page {
+   background-color: #a2e9b9;
+   min-height: 400px;
+   padding: 20px;
+}
+
 .photo-results {
-    max-width: 100%;
+    margin-top: 50px;
 }
-
-img {
-max-width:100%;
-}
-
