--- a/src/pages/Shop/Shop.css
+++ b/src/pages/Shop/Shop.css
@@ -1,4 +1,4 @@
-.poster {
+.shop-poster {
     background-color:rgb(79, 79, 82);
     border: 3px solid rgb(5, 5, 5);
     font-size: 20px;
@@ -7,11 +7,16 @@
     margin: auto;
     padding: 50px;
     padding-top: 50px;
-    margin-top: 50px;
     margin-bottom: 50px;
+    margin-top: 50px;
 }
 
-.poster p {
+.shop-poster-info {
   color: white;
   padding: 20px;
+}
+
+.shop-page {
+   background-color: #a2e9b9;
+   padding: 20px;
 }
